smithy-model/src/test/resources/software/amazon/smithy/model/errorfiles/loader/dupe-resource-binding.errors
[ERROR] -: Parse error at line 8, column 22 near `, | Model
