smithy-model/src/test/resources/software/amazon/smithy/model/errorfiles/loader/dupe-resource-binding.smithy
namespace com.foo

resource Foo {
    identifiers: {
        id: String,
    },
    create: createFoo,
    create: createFoo,
}

operation createFoo {}
